--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,34 @@
 .rootController {
-  display: flex;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+}
+.searchController {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+padding-top: 200px;
+}
+#searchBar{
+  outline: none;
+  border: 0px;
+  border-radius: 2px;
+  font: 16px arial,sans-serif;
+  line-height: 34px;
+  height: 24px;
+  padding-left: 16px;
+  padding-top: 10px;
+  padding-bottom:9px;
+  margin: 10 10 10 33;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  width: 500px;
+
+
 }
