--- a/src/style.css
+++ b/src/style.css
@@ -5,21 +5,43 @@
   bottom: 0;
   left: 0;
 }
-.searchController {
+.homeController, .searchController  {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+}
+.homeController {
   display: flex;
   align-items: center;
-padding-top: 200px;
-flex-direction: column;
+  padding-top: 200px;
+  flex-direction: column;
 }
-.searchLogo{
+.searchController {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.searchControllerTopBar{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  height: 80px;
+  background-color: #F9F9F9;
+border-bottom:rgb(235, 235, 235) solid 1px;
 
-  height: 48px;
+}
+.searchControllerTopBar .searchLogo{
+  height: 30px;
+  margin-left: 22px;
+  margin-right: 21px;
+}
+.homeController .searchLogo{
   margin-bottom: 20px;
+}
+.homeController .searchLogo{
+  height: 48px;
 }
 .searchBar{
   outline: none;
@@ -35,6 +57,4 @@ flex-direction: column;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
   width: 500px;
-
-
 }
