--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,12 @@
   bottom: 0;
   left: 0;
 }
+.searchControllerLoadingWrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 22.5px;
+}
 .homeController, .searchController  {
   position: absolute;
   top: 0;
