--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+.pt-button{
+  outline: none;
+}
 .rootController {
   position: absolute;
   top: 0;
