SearchController this.state.page render() style.css .pagination ...

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
-
+.pagination a {
+  background-color: white !important;
+}
 .popOver {
   padding: 13px;
   padding-top: 9px;
