SearchService search() timeout

--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ padding-left: 150px;
   font-family:arial, sans-serif;
   display: flex;
   cursor: default;
-  min-height: 90px;
+  height: 100px;
 }
 .searchCell .title{
   cursor: pointer;
